k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: auth-container
          image: 777171524883.dkr.ecr.ap-south-1.amazonaws.com/capstone-auth
          imagePullPolicy: IfNotPresent

          resources:
            requests:
              cpu: "250m"
              memory: "120M"
            limits:
              cpu: "500m"
              memory: "256M"

          livenessProbe:
            httpGet:
              path: /_status/healthz
              port: 3000
            initialDelaySeconds: 90
            timeoutSeconds: 10

          readinessProbe:
            httpGet:
              path: /_status/readyz
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
          - containerPort: 3000
            name: auth-http
