k8s/notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  notification-deployment
  labels:
    name:  notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification-server
          image: 777171524883.dkr.ecr.ap-south-1.amazonaws.com/capstone-notification
          resources:
            requests:
              cpu: "150m"
              memory: "100M"
            limits:
              cpu: "300m"
              memory: "200M"

          livenessProbe:
            httpGet:
              path: /_status/healthz
              port: 3000
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /_status/readyz
              port: 3000
            initialDelaySeconds: 90
            timeoutSeconds: 10
          ports:
          - containerPort: 3000
            name: notification
