k8s/router-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router-deployment
  labels:
    name: router-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
        - name: router-server
          image: 777171524883.dkr.ecr.ap-south-1.amazonaws.com/capstone-router

          resources:
            requests:
              cpu: "250m"
              memory: "250M"
            limits:
              cpu: "500m"
              memory: "500M"

          livenessProbe:
            httpGet:
              path: /api/status/healthz
              port: 3000
            initialDelaySeconds: 90
            timeoutSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/status/readyz
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
          - containerPort: 3000
            name: main-sandbox
