k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-deployment
  labels:
    name: sandbox-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      serviceAccountName: resource-manager
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: main-sandbox-container
          image: 777171524883.dkr.ecr.ap-south-1.amazonaws.com/capstone-sandbox
          imagePullPolicy: IfNotPresent

          resources:
            requests:
              cpu: "250m"
              memory: "200Mi"
            limits:
              cpu: "500m"
              memory: "400Mi"

          livenessProbe:
            httpGet:
              path: /api/sandbox/health
              port: 3000
            initialDelaySeconds: 90
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/sandbox/health
              port: 3000
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
          - containerPort: 3000
            name: main-sandbox
