k8s/ai-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  labels:
    app: ai-service
spec:
  selector:
    app: ai-server
  type: ClusterIP
  ports:
  - name: ai-http
    port: 80
    targetPort: 3000
