k8s/router-service.yml
apiVersion: v1
kind: Service
metadata:
  name: router-service
  labels:
    app: router
spec:
  selector:
    app: router
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
