k8s/sandbox-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-service
spec:
  selector:
    app: sandbox
  type: ClusterIP
  ports:
  - name: main-sandbox-port
    port: 80
    targetPort: 3000
